--- a/pom.xml
+++ b/pom.xml
@@ -497,12 +497,12 @@
 	              <repository>
   					<id>deployment</id>
 					<name>Internal Release</name>
-					<url>http://http://10.128.0.10:8081/repository/maven-releases/</url>
+					<url>http://localhost:8081/repository/GameOfLife_Rele/</url>
 			       </repository>
 			       <snapshotRepository>
 				        <id>deployment</id>
 				        <name>Internal Snapshot Releases</name>
-				        <url>http://10.128.0.10:8081/repository/maven-snapshots/</url>
+				        <url>http://localhost:8081/repository/GameOfLife_Snap/</url>
 			       </snapshotRepository>
 	            <distributionManagement>
              <dependencies>
