--- a/pom.xml
+++ b/pom.xml
@@ -492,28 +492,28 @@
                         <version>2.1</version>
                     </plugin>
                 </plugins>
-               </build>
-                    <distributionManagement>
+                     <distributionManagement>
 	              <repository>
-  					<id>deployment</id>
-					<name>Internal Release</name>
-					<url>http://localhost:8081/repository/GameOfLife_Rele/</url>
-			       </repository>
-			       <snapshotRepository>
-				        <id>deployment</id>
-				        <name>Internal Snapshot Releases</name>
-				        <url>http://localhost:8081/repository/GameOfLife_Snap/</url>
-			       </snapshotRepository>
-	            <distributionManagement>
-             <dependencies>
+  			   <id>deployment</id>
+			   <name>Internal Release</name>
+			   <url>http://localhost:8081/repository/GameOfLife_Rele/</url>
+		      </repository>
+		      <snapshotRepository>
+				<id>deployment</id>
+				<name>Internal Snapshot Releases</name>
+				<url>http://localhost:8081/repository/GameOfLife_Snap/</url>
+		      </snapshotRepository>
+	             </distributionManagement>
+                  <dependencies>
 	                <dependency>
 				<groupId>jsvsx.servlet</groupId>
 				<artifactId>javax.servlet-api</artifactId>
 				<version>3.0.1</version>
 			</dependency>
-             </dependencies>
-            </project>
+                  </dependencies>
+                </project>
             </reporting>
         </profile>
     </profiles>
 </project>
+                    
