--- a/pom.xml
+++ b/pom.xml
@@ -507,6 +507,6 @@
 	                <name>maven-snapshots</name>
 			<url>http://localhost:8081/repository/maven-snapshots/</url>
 		</snapshotRepository>
-	<distributionManagement>
+	</distributionManagement>
     </project>
                     
