--- a/pom.xml
+++ b/pom.xml
@@ -498,14 +498,14 @@
     </profiles>
 	<distributionManagement>
 	        <repository>
-  			<id>maven-releases</id>
-			<name>maven-releases</name>
-			<url>http://localhost:8081/repository/maven-releases/</url>
+  			<id>Releases</id>
+			<name>Releases</name>
+			<url>http://localhost:8081/nexus/content/repositories/releases/</url>
 		</repository>
 		<snapshotRepository>
-			<id>maven-snapshots</id>
-	                <name>maven-snapshots</name>
-			<url>http://localhost:8081/repository/maven-snapshots/</url>
+			<id>Snapshots</id>
+	                <name>Snapshots</name>
+			<url>http://localhost:8081/nexus/content/repositories/snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
     </project>
